--- a/packages/hs-home/src/pages/footer/index.less
+++ b/packages/hs-home/src/pages/footer/index.less
@@ -5,13 +5,13 @@
 // Common
 .footer {
   width: 100vw;
-  margin-top: 200px;
+  margin-top: 80px;
   &__shop {
     width: 100vw;
-    height: 382px;
+    height: 250px;
     background: #e60012;
     display: flex;
-    padding-top: 97px;
+    padding-top: 57px;
     justify-content: center;
   }
   &__block {
@@ -19,11 +19,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 170px;
+    &:first-child {
+      border-right: 2px solid #fff;
+    }
     .footer__title {
-      font-family: STYuanti-SC-Bold, STYuanti-SC-Bold;
-      font-size: 39px;
+      font-size: 18px;
       color: #fff;
-      letter-spacing: 10px;
+      line-height: 42px;
     }
   }
 
@@ -53,7 +56,7 @@
   }
   &__links {
     background-color: #fff;
-    height: 82px;
+    height: 80px;
     &__container {
       height: 100%;
       margin: 0 auto;
@@ -89,14 +92,14 @@
   &__channel {
     display: flex;
     justify-content: space-evenly;
-    margin-top: 40px;
+    margin-top: 26px;
     width: 100%;
     &__list {
       cursor: pointer;
-      width: 80px;
+      width: 61.73px;
       position: relative;
       .icon {
-        width: 80px;
+        width: 61.73px;
       }
       .qrcodeLeft {
         width: max-content;
