--- a/packages/hs-home/src/pages/home/index.less
+++ b/packages/hs-home/src/pages/home/index.less
@@ -60,7 +60,7 @@
       display: none;
     }
     &__title {
-      width: 455px;
+      width: 228px;
     }
 
     &__book {
@@ -225,7 +225,7 @@
     margin-bottom: -70px;
     &__title {
       margin-top: 164px;
-      width: 439px;
+      width: 228px;
     }
     &__container {
       margin-top: 92px;
@@ -287,7 +287,7 @@
   // 关于好侍
   .abouths {
     width: 100vw;
-    height: 650px;
+    height: 420px;
     display: flex;
     flex-wrap: nowrap;
     &__title {
@@ -307,19 +307,25 @@
       align-items: center;
     }
     &__bg {
-      height: 40vw;
+      // height: 40vw;
+      height: 368px;
+      width: 570px;
     }
     &__btn {
-      width: 451px;
+      width: 220px;
       cursor: pointer;
     }
     &__desc {
       margin-top: 47px;
-      font-family: STYuanti-SC-Regular, STYuanti-SC-Regular;
-      font-size: 23px;
-      color: #000000;
       text-align: center;
-      line-height: 40px;
+      font-family: STYuanti-SC, STYuanti-SC;
+      font-weight: 400;
+      font-size: 15px;
+      color: #000000;
+      line-height: 32px;
+      text-align: center;
+      font-style: normal;
+      text-transform: none;
     }
     &__desc-mob {
       display: none;
@@ -335,28 +341,29 @@
     flex-direction: column;
     align-items: center;
     &__title {
-      width: 455px;
+      width: 228px;
     }
     &__container {
-      width: 90%;
+      width: 100%;
       display: flex;
       flex-direction: column;
       .borderbottom {
-        padding-bottom: 42px;
-        border-bottom: 2px solid #707070;
+        padding-bottom: 30px;
+        border-bottom: 1px solid #bab4b5;
       }
       .news__list {
         cursor: pointer;
         display: flex;
         align-items: center;
-        margin-top: 42px;
+        margin-top: 32px;
         .news__type {
-          width: 128px;
-          line-height: 53px;
+          width: 80px;
+          line-height: 36px;
           text-align: center;
-          font-size: 27px;
+          font-size: 16px;
+          font-weight: 500;
           color: #fff;
-          border-radius: 10px;
+          border-radius: 4px;
           &-company {
             background: #e60012;
           }
@@ -368,14 +375,15 @@
           }
         }
         .news__date {
-          margin-left: 53px;
-          font-weight: bold;
-          font-size: 27px;
+          margin-left: 26px;
+          font-weight: 500;
+          font-size: 16px;
           color: #000000;
         }
         .news__desc {
-          margin-left: 32px;
-          font-size: 27px;
+          margin-left: 8px;
+          font-weight: 500;
+          font-size: 16px;
           color: #000000;
           &:hover {
             text-decoration: underline;
@@ -385,8 +393,8 @@
     }
     &__more {
       cursor: pointer;
-      margin-top: 65px;
-      width: 227px;
+      margin-top: 57px;
+      width: 154px;
     }
     &__more1 {
       display: none;
