--- a/packages/hs-home/src/pages/header/index.less
+++ b/packages/hs-home/src/pages/header/index.less
@@ -4,10 +4,10 @@
 
 // Common
 .header {
-  margin: 53px auto 0;
+  margin: 70px auto 0;
   position: relative;
   &__logo {
-    width: 183px;
+    width: 244px;
     cursor: pointer;
   }
   &__nav {
@@ -31,7 +31,7 @@
         content: "";
         display: block;
         width: 100%;
-        height: 2px;
+        height: 3px;
         background: transparent;
       }
       &:hover {
@@ -45,11 +45,12 @@
       &__content {
         position: relative;
         z-index: 9;
-        padding: 8px 14px 10px;
+        padding: 16px 20px;
         color: #000000;
-        line-height: 27px;
         cursor: pointer;
-        font-family: STYuanti-SC-Bold, STYuanti-SC-Bold;
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 25px;
       }
       .nav__sub {
         background: #fff;
