--- a/packages/hs-home/src/pages/productor/index.less
+++ b/packages/hs-home/src/pages/productor/index.less
@@ -9,14 +9,13 @@
   align-items: center;
   // 一级导航
   &__nav {
-    padding-top: 116px;
+    padding-top: 44px;
     display: flex;
     align-items: center;
     justify-content: space-around;
-    margin-bottom: 59px;
+    margin-bottom: 50px;
     &__item {
-      width: 435px;
-      height: 156px;
+      width: 232px;
       cursor: pointer;
       &:last-child {
         > img {
@@ -33,8 +32,8 @@
     margin-bottom: 79px;
     &__item {
       cursor: pointer;
-      line-height: 60px;
-      font-size: 24px;
+      line-height: 48px;
+      font-size: 18px;
       color: #000000;
       text-align: center;
       border: 1px solid #707070;
@@ -57,10 +56,10 @@
     .productor__list {
       margin-bottom: 98px;
       &__title {
-        width: 329px;
+        width: 327px;
         margin: 0 auto;
-        line-height: 60px;
-        font-size: 24px;
+        line-height: 48px;
+        font-size: 18px;
         color: #ffffff;
         background: url("../../assets/pro_title_bg.png") no-repeat;
         background-size: contain;
@@ -70,7 +69,7 @@
       &__goods {
         border: 1px solid #707070;
         border-radius: 15px;
-        padding: 44px;
+        padding: 36px 44px 0;
         display: flex;
         flex-wrap: wrap;
         justify-content: flex-start;
@@ -78,12 +77,13 @@
         align-content: flex-start;
         &__item {
           cursor: pointer;
-          width: 330px;
-          margin-bottom: 50px;
+          width: 329px;
+          margin-bottom: 38px;
+          margin-right: 18px;
           display: flex;
           flex-direction: column;
           align-items: center;
-          padding-top: 21px;
+          padding-top: 17px;
           border-bottom: 1px solid #000000;
           &:hover {
             .productor__list__goods__item__detailbtn {
@@ -96,8 +96,8 @@
           }
           &__img {
             width: 240px;
-            height: 150px;
-            margin-bottom: 32px;
+            height: 123px;
+            margin-bottom: 25px;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -108,22 +108,23 @@
             }
           }
           &__title {
-            font-family: STYuanti-SC-Bold, STYuanti-SC-Bold;
-            font-size: 18px;
+            font-size: 16px;
             color: #000000;
             margin-bottom: 2px;
-            line-height: 28px;
+            line-height: 22px;
             overflow: hidden;
             text-overflow: ellipsis;
+            font-weight: 500;
             white-space: nowrap;
             width: 100%;
             text-align: center;
           }
           &__desc {
-            font-size: 14px;
-            line-height: 19px;
-            color: #000000;
-            margin-bottom: 10px;
+            font-size: 12px;
+            line-height: 17px;
+            font-weight: 500;
+            color: #999999;
+            margin-bottom: 6px;
             overflow: hidden;
             text-overflow: ellipsis;
             display: -webkit-box;
@@ -133,9 +134,8 @@
           }
           &__detailbtn {
             width: 100%;
-            line-height: 50px;
-            font-family: STYuanti-SC-Bold, STYuanti-SC-Bold;
-            font-size: 24px;
+            line-height: 25px;
+            font-size: 18px;
             color: #000000;
             display: flex;
             align-items: center;
@@ -147,7 +147,7 @@
               width: 0;
               height: 0;
               border-style: solid;
-              border-width: 0 0 50px 50px;
+              border-width: 0 0 25px 25px;
               border-color: transparent transparent #e60012 transparent;
               right: 0;
               bottom: 0;
@@ -176,10 +176,10 @@
   }
   //   返回首页
   .backhome {
-    width: 372px;
+    width: 322px;
     line-height: 65px;
     background: #e60012;
-    font-size: 33px;
+    font-size: 24px;
     color: #ffffff;
     text-align: center;
     border-radius: 50px;
