--- a/packages/hs-home/src/pages/header/mobile.less
+++ b/packages/hs-home/src/pages/header/mobile.less
@@ -8,6 +8,10 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    border-bottom: 2px solid #bf121f;
+    .HsBreadcrumb {
+      display: none;
+    }
     &__nav {
       display: none;
     }
