--- a/packages/hs-home/src/pages/home/index.less
+++ b/packages/hs-home/src/pages/home/index.less
@@ -45,7 +45,7 @@
   .classroom {
     position: relative;
     width: 100vw;
-    height: 780px;
+    height: 730px;
     padding-top: 68px;
     display: flex;
     flex-direction: column;
@@ -65,7 +65,7 @@
     &__book {
       width: 276px;
       position: absolute;
-      top: 348px;
+      top: 300px;
       margin-left: -750px;
       z-index: 1;
       > img {
@@ -74,10 +74,10 @@
       }
     }
     &__tips {
-      width: 1376px;
+      width: 1254px;
       position: absolute;
-      top: 25px;
-      margin-left: 700px;
+      top: 14px;
+      margin-left: 603px;
       > img {
         transition: all 0.8s ease-in 0.8s;
         transform: translate(-100px, 0);
@@ -86,14 +86,14 @@
     .btn {
       position: absolute;
       bottom: 60px;
-      width: 367px;
-      height: 88px;
+      width: 181px;
+      height: 43px;
       .icon {
-        width: 68px;
+        right: 1%;
+        width: 37px;
       }
       &__desc {
-        font-family: STYuanti-SC-Bold, STYuanti-SC-Bold;
-        font-size: 45px;
+        font-size: 18px;
       }
     }
   }
@@ -101,7 +101,7 @@
   .hotfancy {
     padding-bottom: 60px;
     width: 100vw;
-    background-image: url("../../assets/hot_bg.png");
+    background-image: url("../../assets/hot_bg.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -225,7 +225,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image: url("../../assets/product_bg.png");
+    background-image: url("../../assets/product_bg.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
