--- a/packages/hs-home/src/pages/cookbook/index.less
+++ b/packages/hs-home/src/pages/cookbook/index.less
@@ -15,8 +15,9 @@
       align-self: center;
       justify-content: space-between;
       &__list {
-        width: 252px;
-        line-height: 83px;
+        width: 187px;
+        margin-right: 50px;
+        line-height: 70px;
         background: #f7f7f7;
         border-radius: 48px;
         font-size: 20px;
@@ -24,8 +25,11 @@
         font-weight: 600;
         color: #333333;
         text-align: right;
-        padding-right: 63px;
+        padding-right: 20px;
         position: relative;
+        &:last-child {
+          margin-right: 0;
+        }
         &-checked {
           background: #e60012;
           color: #fff;
@@ -37,10 +41,10 @@
         > img {
           content: "";
           position: absolute;
-          left: -8px;
-          top: -5px;
-          width: 96px;
-          height: 96px;
+          left: -7px;
+          top: -3px;
+          width: 79px;
+          height: 79px;
           background-size: contain;
           background-repeat: no-repeat;
         }
