--- a/packages/hs-home/src/pages/header/pad.less
+++ b/packages/hs-home/src/pages/header/pad.less
@@ -1,7 +1,10 @@
 // Pad
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
-  @containerW: 1120px;
+  @containerW: 100%;
   div.header {
     width: @containerW;
+    .HsBreadcrumb {
+      width: @containerW;
+    }
   }
 }
