--- a/packages/hs-home/src/pages/header/index.less
+++ b/packages/hs-home/src/pages/header/index.less
@@ -7,8 +7,9 @@
   margin: 70px auto 0;
   position: relative;
   &__logo {
-    width: 244px;
     cursor: pointer;
+    height: 32px;
+    width: auto;
   }
   &__nav {
     margin-top: 15px;
