--- a/packages/hs-home/src/pages/home/index.less
+++ b/packages/hs-home/src/pages/home/index.less
@@ -362,6 +362,13 @@
     height: 420px;
     display: flex;
     flex-wrap: nowrap;
+    &__container {
+      width: 1120px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin: 0 auto;
+    }
     &__title {
       display: none;
     }
