--- a/packages/hs-home/src/pages/prodetail/index.less
+++ b/packages/hs-home/src/pages/prodetail/index.less
@@ -135,6 +135,9 @@
       .videocontainer {
         width: 100%;
         height: 650px;
+        .play {
+          width: 160px;
+        }
       }
     }
     &__cookbook {
