--- a/packages/hs-home/src/pages/prodetail/mobile.less
+++ b/packages/hs-home/src/pages/prodetail/mobile.less
@@ -63,6 +63,9 @@
         }
         .videocontainer {
           height: 54.4vw;
+          .play {
+            width: 20%;
+          }
         }
       }
       &__cookbook {
