--- a/packages/hs-home/src/pages/home/mobile.less
+++ b/packages/hs-home/src/pages/home/mobile.less
@@ -191,6 +191,10 @@
       flex-direction: column;
       align-items: center;
       height: auto;
+      &__container {
+        width: 100vw;
+        display: block;
+      }
       &__desc {
         display: none;
       }
