--- a/packages/hs-home/src/pages/prodetail/index.less
+++ b/packages/hs-home/src/pages/prodetail/index.less
@@ -10,7 +10,7 @@
     padding-top: 24px;
     height: 648px;
     background-image: url("../../assets/coverImageBg.png");
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
 
     &__img {
