--- a/packages/hs-home/src/pages/prodetail/index.less
+++ b/packages/hs-home/src/pages/prodetail/index.less
@@ -45,7 +45,7 @@
     border-radius: 45px;
     font-weight: 600;
     font-size: 24px;
-    text-align: center;
+    padding-left: 120px;
     color: #ffffff;
     &::after {
       content: "";
@@ -59,12 +59,25 @@
       right: 53px;
       background-size: contain;
     }
+    .brand-1 {
+      width: 90px;
+      height: 27px;
+      left: 20px;
+    }
+    .brand-2 {
+      width: 80px;
+      height: 90px;
+      left: 28px;
+    }
+    .brand-3 {
+      width: 58px;
+      height: 58px;
+      left: 38px;
+    }
     &__img {
       position: absolute;
-      width: 80px;
       top: 50%;
       transform: translateY(-50%);
-      left: 20px;
     }
   }
   &__title {
