--- a/packages/hs-home/src/pages/cookdetail/index.less
+++ b/packages/hs-home/src/pages/cookdetail/index.less
@@ -145,6 +145,11 @@
             display: flex;
             align-items: flex-start;
             border-bottom: 1px dashed #221714;
+            &:nth-child(3) {
+              .cookDetail__container__way__method__list__item__img {
+                height: 270px;
+              }
+            }
             &__title {
               font-weight: 600;
               font-size: 30px;
