--- a/packages/hs-home/src/pages/header/index.less
+++ b/packages/hs-home/src/pages/header/index.less
@@ -4,17 +4,28 @@
 
 // Common
 .header {
-  margin: 70px auto 0;
+  margin: 35px auto 0;
   position: relative;
   &__logo {
     cursor: pointer;
     height: 32px;
     width: auto;
+    margin-bottom: 23px;
   }
   &__nav {
     margin-top: 15px;
     display: flex;
     align-items: center;
+    position: relative;
+    &:after {
+      content: "";
+      position: absolute;
+      height: 8px;
+      width: 100vw;
+      left: calc(-50vw + 1120px / 2);
+      top: 0;
+      box-shadow: 0px -3px 3px -3px #ccc;
+    }
     .active {
       color: red;
       &::after {
