--- a/packages/hs-home/src/pages/productor/index.less
+++ b/packages/hs-home/src/pages/productor/index.less
@@ -18,6 +18,7 @@
       width: 232px;
       cursor: pointer;
       &:last-child {
+        margin-left: 80px;
         > img {
           margin-top: 26px;
         }
