--- a/packages/hs-home/src/pages/home/index.less
+++ b/packages/hs-home/src/pages/home/index.less
@@ -5,6 +5,27 @@
 // Common
 .Home {
   margin: 10px auto 0;
+  // 轮博圆点
+  .swiper-pagination {
+    text-align: left;
+    padding-left: 72vw;
+    margin-bottom: 2vw;
+  }
+  .swiper-pagination-bullet {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background: #333;
+    opacity: 1;
+  }
+
+  .swiper-pagination-bullet-active {
+    width: 20px;
+    height: 10px;
+    border-radius: 40%;
+    background-color: #fff;
+  }
+
   // 轮播
   .banner {
     position: relative;
@@ -249,6 +270,7 @@
         .fancy__swipercontainer {
           position: relative;
           border-radius: 10px;
+
           .slideContainer {
             > img {
               border-radius: 10px;
