--- a/packages/hs-home/src/pages/productor/mobile.less
+++ b/packages/hs-home/src/pages/productor/mobile.less
@@ -7,6 +7,9 @@
       &__item {
         height: auto;
         width: 45%;
+        &:last-child {
+          margin-left: 0;
+        }
       }
     }
     &__secondnav {
@@ -44,6 +47,7 @@
             padding: 2vw 2vw 0;
             margin-bottom: 4.6vw;
             height: max-content;
+            margin-right: 6px;
             &__img {
               width: 100%;
               height: 20vw;
@@ -80,7 +84,7 @@
       }
     }
     .backhome {
-      display: none;
+      width: 70vw;
     }
   }
 }
