--- a/packages/hs-home/src/components/breadcrumb/index.less
+++ b/packages/hs-home/src/components/breadcrumb/index.less
@@ -2,7 +2,7 @@
   width: 100vw;
   margin-left: calc(-50vw + 100% / 2);
   text-align: center;
-  background: #e4e4e4;
+  background: #e7e6df;
 
   ol {
     width: 1120px;
