--- a/packages/hs-home/src/pages/footer/mobile.less
+++ b/packages/hs-home/src/pages/footer/mobile.less
@@ -6,21 +6,24 @@
     height: auto;
     flex-direction: column;
     align-items: center;
-    padding-bottom: 19vw;
     &__shop {
       flex-direction: column;
       height: auto;
-      padding-top: 0;
+      padding-top: 9vw;
       padding-bottom: 9.33vw;
     }
     &__block {
-      margin-top: 9vw;
+      margin-top: 10vw;
+      height: auto;
       width: auto;
+      &:first-child {
+        border: none;
+      }
       .footer__title {
         font-family: Yuanti SC, Yuanti SC;
-        font-size: 2rem;
+        font-size: 1.3125rem;
         color: #fff;
-        letter-spacing: 10px;
+        letter-spacing: 4px;
       }
     }
     &__channel {
@@ -47,7 +50,7 @@
         }
       }
       .icon {
-        width: 10vw;
+        width: 10.4vw;
       }
     }
 
