--- a/packages/hs-home/src/pages/prodetail/mobile.less
+++ b/packages/hs-home/src/pages/prodetail/mobile.less
@@ -8,8 +8,13 @@
     }
     &__coverImage {
       margin-bottom: 4vw;
+      height: 75vw;
       .prodetail__coverImage__img {
+        height: 50vw;
         width: 100vw;
+      }
+      &__name {
+        font-size: 0.875rem;
       }
     }
     .prodetail__brand {
