--- a/packages/hs-home/src/pages/productor/index.less
+++ b/packages/hs-home/src/pages/productor/index.less
@@ -41,10 +41,12 @@
       &-active {
         background-color: #e60012;
         color: #fff;
+        border-color: transparent;
       }
       &:hover {
         background-color: #e60012;
         color: #fff;
+        border-color: transparent;
       }
     }
   }
