--- a/packages/hs-home/src/pages/productor/mobile.less
+++ b/packages/hs-home/src/pages/productor/mobile.less
@@ -85,6 +85,16 @@
     }
     .backhome {
       width: 70vw;
+      font-size: 1.25rem;
+      line-height: 14vw;
+      &:after {
+        width: 6vw;
+        height: 6vw;
+      }
+      &:before {
+        width: 12vw;
+        height: 12vw;
+      }
     }
   }
 }
