--- a/packages/hs-home/src/pages/home/mobile.less
+++ b/packages/hs-home/src/pages/home/mobile.less
@@ -114,7 +114,15 @@
         }
         &__btn {
           width: 50vw;
-          margin-top: 22vw;
+          margin-top: 18vw;
+          height: 10.66vw;
+          .btn__desc {
+            font-size: 1.125rem;
+            padding-left: 10vw;
+          }
+          .icon {
+            width: 8vw;
+          }
         }
         &__swiperwrap {
           width: 81vw;
@@ -149,6 +157,7 @@
 
     // 产品介绍
     .product {
+      padding-bottom: 11vw;
       &__title {
         margin-top: 16vw;
         width: 59vw;
@@ -176,7 +185,7 @@
         }
       }
       .more {
-        margin-top: 1vw;
+        margin-top: 10.66vw;
         display: block;
         width: 44vw;
       }
