--- a/packages/hs-home/src/pages/productor/index.less
+++ b/packages/hs-home/src/pages/productor/index.less
@@ -120,9 +120,12 @@
             text-align: center;
           }
           &__desc {
+            width: 100%;
+            text-align: center;
             font-size: 12px;
             line-height: 17px;
             font-weight: 500;
+            height: 34px;
             color: #999999;
             margin-bottom: 6px;
             overflow: hidden;
