--- a/packages/hs-home/src/pages/home/index.less
+++ b/packages/hs-home/src/pages/home/index.less
@@ -31,7 +31,7 @@
     position: relative;
     width: 100vw;
     margin-top: 1px;
-    height: 600px;
+    max-height: 600px;
     .banner__prev {
       left: 10%;
     }
