--- a/packages/hs-home/src/pages/home/mobile.less
+++ b/packages/hs-home/src/pages/home/mobile.less
@@ -43,6 +43,7 @@
         height: 10vw;
         &__desc {
           font-size: 1.4rem;
+          padding-left: 9vw;
         }
         .icon {
           width: 7vw;
