--- a/packages/hs-home/src/pages/cookdetail/mobile.less
+++ b/packages/hs-home/src/pages/cookdetail/mobile.less
@@ -6,6 +6,11 @@
     padding: 6vw 3.2vw 0;
     &__container {
       width: auto;
+      &__video {
+        width: 100%;
+        height: auto;
+        margin-bottom: 10vw;
+      }
       &__titlegroup {
         height: 6.7vw;
         line-height: 6.7vw;
