--- a/packages/hs-home/src/pages/home/mobile.less
+++ b/packages/hs-home/src/pages/home/mobile.less
@@ -10,6 +10,23 @@
       border-top: 1px solid #e60012;
       height: auto;
     }
+
+    .swiper-pagination {
+      text-align: center;
+      padding-left: 0;
+      margin-bottom: 0;
+    }
+    .swiper-pagination-bullet {
+      width: 8vw;
+      height: 1.6vw;
+      border-radius: 4px;
+      background: #fff;
+      opacity: 0.5;
+    }
+
+    .swiper-pagination-bullet-active {
+      opacity: 1;
+    }
     // 日式咖喱课堂
     .classroom {
       padding-top: 10vw;
