--- a/packages/hs-home/src/pages/cookdetail/index.less
+++ b/packages/hs-home/src/pages/cookdetail/index.less
@@ -92,6 +92,13 @@
       width: 784px;
       height: 524px;
       margin-bottom: 80px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      &__img {
+        max-height: 100%;
+        max-width: 100%;
+      }
     }
     &__way {
       width: 100%;
