--- a/packages/hs-home/src/pages/header/mobile.less
+++ b/packages/hs-home/src/pages/header/mobile.less
@@ -15,8 +15,8 @@
     &__nav {
       display: none;
     }
-    &__logo {
-      width: 155px;
+    .header__logo {
+      margin-bottom: 0;
     }
     .mob__nav__btn {
       display: block;
