--- a/packages/hs-home/src/pages/prodetail/mobile.less
+++ b/packages/hs-home/src/pages/prodetail/mobile.less
@@ -22,8 +22,22 @@
       width: 69.33vw;
       line-height: 12vw;
       font-size: 0.874rem;
+      padding-left: 16vw;
       .prodetail__brand__img {
-        width: 15vw;
+        width: 12vw;
+        height: auto;
+      }
+      .brand-1 {
+        width: 13vw;
+        left: 2vw;
+      }
+      .brand-2 {
+        width: 11vw;
+        left: 2vw;
+      }
+      .brand-3 {
+        width: 10vw;
+        left: 2.5vw;
       }
       &::after {
         width: 6vw;
