--- a/packages/hs-home/src/pages/productor/mobile.less
+++ b/packages/hs-home/src/pages/productor/mobile.less
@@ -12,11 +12,36 @@
         }
       }
     }
+    // .tab-2 {
+    //   .productor__secondnav__item {
+    //     flex: none;
+    //   }
+    //   .productor__secondnav__item:nth-child(-n + 3) {
+    //     padding: 0 4.8vw;
+    //     display: block;
+    //     line-height: 12vw;
+    //   }
+    //   .productor__secondnav__item:nth-child(3) {
+    //   }
+    //   .productor__secondnav__item:nth-child(4) {
+    //     padding: 0 12.52vw;
+    //     margin-left: auto;
+    //   }
+    //   .productor__secondnav__item:nth-child(5) {
+    //     padding: 0 2.93vw;
+    //     margin-right: auto;
+    //   }
+    // }
     &__secondnav {
       flex-wrap: wrap;
-      //   display: none;
-      width: 90%;
+      width: 96%;
       margin-bottom: 8.8vw;
+      border: 1px solid #707070;
+      border-radius: 7.2vw;
+      .productor__secondnav__item {
+        border-radius: 7.2vw;
+        border-color: transparent;
+      }
       > a {
         flex: auto;
         margin-right: 0;
