--- a/packages/hs-home/src/pages/cookdetail/index.less
+++ b/packages/hs-home/src/pages/cookdetail/index.less
@@ -9,6 +9,22 @@
     rgba(255, 255, 255, 0.1) 100%
   );
   padding-top: 103px;
+  .swiper_right,
+  .swiper_left {
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    top: 50%;
+    cursor: pointer;
+    z-index: 999;
+    transform: translateY(-50%);
+  }
+  .swiper_right {
+    right: -50px;
+  }
+  .swiper_left {
+    left: -50px;
+  }
   .banner__prev,
   .banner__next {
     position: absolute;
@@ -197,11 +213,12 @@
       }
       &__banner {
         position: relative;
-        width: 908px;
+        width: 812px;
         height: 312px;
         margin: 0 auto;
         .mySwiper {
           width: 100%;
+
           .swiper-slide {
             background-position: center;
             background-size: cover;
@@ -209,6 +226,9 @@
             height: 270px;
             display: flex;
             align-items: center;
+          }
+          .swiper-slide-active {
+            box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.5);
           }
 
           .swiper-slide img {
