--- a/packages/hs-home/src/pages/header/mobile.less
+++ b/packages/hs-home/src/pages/header/mobile.less
@@ -2,9 +2,9 @@
 @media only screen and (max-width: 767px) {
   // 导航
   div.header {
-    height: 73px;
+    height: 17.6vw;
     margin-top: 0;
-    padding: 0 20px;
+    padding: 0 4vw;
     display: flex;
     align-items: center;
     justify-content: space-between;
