--- a/packages/hs-home/src/pages/home/index.less
+++ b/packages/hs-home/src/pages/home/index.less
@@ -190,6 +190,9 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      &__mobileBanner {
+        display: none;
+      }
       &__showcase {
         display: flex;
         align-items: center;
@@ -466,10 +469,11 @@
       width: 228px;
     }
     &__container {
+      margin-top: 15px;
       width: 100%;
       display: flex;
       flex-direction: column;
-      .borderbottom {
+      .topping {
         padding-bottom: 30px;
         border-bottom: 1px solid #bab4b5;
       }
@@ -477,7 +481,7 @@
         cursor: pointer;
         display: flex;
         align-items: center;
-        margin-top: 32px;
+        margin-top: 35px;
         .news__type {
           width: 80px;
           line-height: 36px;
