--- a/packages/hs-home/src/pages/productor/index.less
+++ b/packages/hs-home/src/pages/productor/index.less
@@ -22,6 +22,12 @@
       }
     }
   }
+  .secondnav-pc {
+    display: flex;
+  }
+  .secondnav-mobile {
+    display: none;
+  }
   // 二级导航
   &__secondnav {
     width: 100%;
