--- a/packages/hs-home/src/pages/productor/mobile.less
+++ b/packages/hs-home/src/pages/productor/mobile.less
@@ -12,30 +12,58 @@
         }
       }
     }
-    // .tab-2 {
-    //   .productor__secondnav__item {
-    //     flex: none;
-    //   }
-    //   .productor__secondnav__item:nth-child(-n + 3) {
-    //     padding: 0 4.8vw;
-    //     display: block;
-    //     line-height: 12vw;
-    //   }
-    //   .productor__secondnav__item:nth-child(3) {
-    //   }
-    //   .productor__secondnav__item:nth-child(4) {
-    //     padding: 0 12.52vw;
-    //     margin-left: auto;
-    //   }
-    //   .productor__secondnav__item:nth-child(5) {
-    //     padding: 0 2.93vw;
-    //     margin-right: auto;
-    //   }
-    // }
+    .secondnav-pc {
+      display: none;
+    }
+    .secondnav-mobile {
+      display: flex;
+      margin-bottom: 2.66vw;
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+    /* 外部容器样式 */
+    .productor__nav-container-bottom {
+      position: relative;
+      width: 96%;
+      margin-bottom: 8.8vw;
+      /* 固定状态样式 */
+      .fixed-nav {
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 1000;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        animation: slideDown 0.3s ease-out;
+        width: 100%;
+        background: #fff;
+        .productor__secondnav {
+          margin: 0 auto;
+        }
+        .tab-2:first-child {
+          margin-bottom: 2.66vw;
+        }
+      }
+    }
+    .productor__nav-container {
+      background-color: #fff;
+      .mobile-item-3 {
+        padding: 0 12.53vw;
+        flex: none;
+      }
+      .mobile-item-4 {
+        padding: 0 2.66vw;
+        flex: none;
+      }
+    }
+    .tab-2:last-child {
+      width: fit-content;
+      margin: 0 auto;
+    }
     &__secondnav {
       flex-wrap: wrap;
       width: 96%;
-      margin-bottom: 8.8vw;
+      margin-bottom: 0;
       border: 1px solid #707070;
       border-radius: 7.2vw;
       .productor__secondnav__item {
