--- a/packages/hs-home/src/pages/cookbook/index.less
+++ b/packages/hs-home/src/pages/cookbook/index.less
@@ -3,11 +3,20 @@
 @import "./mobile.less";
 
 .cookbook {
+  .ant-pagination-item-active {
+    color: #e60012;
+    border-color: #e60012;
+    a {
+      color: #e60012;
+      border-color: #e60012;
+    }
+  }
   &__nav {
     height: 216px;
     background-color: #fff;
     display: flex;
     align-items: center;
+
     &__container {
       width: 1120px;
       margin: 0 auto;
