--- a/packages/hs-home/src/pages/cookdetail/mobile.less
+++ b/packages/hs-home/src/pages/cookdetail/mobile.less
@@ -39,7 +39,7 @@
         }
       }
       &__way {
-        margin-bottom: 0;
+        margin-bottom: 12.53vw;
         flex-direction: column;
         &__material,
         &__method {
