--- a/packages/hs-home/src/pages/header/mobile.less
+++ b/packages/hs-home/src/pages/header/mobile.less
@@ -27,7 +27,7 @@
       width: 100%;
       background: #e60012;
       left: 0;
-      top: 73px;
+      top: 17.6vw;
       z-index: 2;
       flex-direction: column;
       align-items: center;
