--- a/packages/hs-home/src/pages/productor/mobile.less
+++ b/packages/hs-home/src/pages/productor/mobile.less
@@ -140,6 +140,7 @@
       width: 70vw;
       font-size: 1.25rem;
       line-height: 14vw;
+      margin-top: 6vw;
       &:after {
         width: 6vw;
         height: 6vw;
