--- a/packages/hs-home/src/pages/cookdetail/index.less
+++ b/packages/hs-home/src/pages/cookdetail/index.less
@@ -3,6 +3,9 @@
 @import "./mobile.less";
 
 .cookDetail {
+  .backhome {
+    display: none;
+  }
   background: linear-gradient(
     180deg,
     rgba(239, 205, 142, 0.1) 0%,
