--- a/packages/hs-home/src/pages/footer/index.less
+++ b/packages/hs-home/src/pages/footer/index.less
@@ -48,6 +48,12 @@
         font-size: 14px;
         color: #ffffff;
         cursor: pointer;
+        &:last-child {
+          cursor: initial;
+          &:hover {
+            text-decoration: none;
+          }
+        }
         &:hover {
           text-decoration: underline;
         }
