--- a/packages/hs-home/src/pages/footer/mobile.less
+++ b/packages/hs-home/src/pages/footer/mobile.less
@@ -9,7 +9,7 @@
     &__shop {
       flex-direction: column;
       height: auto;
-      padding-top: 9vw;
+      padding-top: 0;
       padding-bottom: 9.33vw;
     }
     &__block {
