--- a/packages/hs-home/src/pages/home/index.less
+++ b/packages/hs-home/src/pages/home/index.less
@@ -166,6 +166,9 @@
             font-size: 24px;
             color: #e60012;
           }
+          &__mobileTitle {
+            display: none;
+          }
           &__img {
             margin-top: 8px;
             height: 320px;
