--- a/packages/hs-home/src/pages/home/mobile.less
+++ b/packages/hs-home/src/pages/home/mobile.less
@@ -109,6 +109,12 @@
             &__title {
               display: none;
             }
+            &__mobileTitle {
+              display: block;
+              color: #e60012;
+              font-size: 1.5rem;
+              font-weight: 600;
+            }
             &__more {
               margin-top: 3vw;
               width: 44vw;
